--- a/s-mount/Base.lproj/Main.storyboard
+++ b/s-mount/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="e6b-ov-N7I">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,20 +9,206 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Avenir.ttc">
+            <string>Avenir-Medium</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Selection View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="Selection View Controller" id="BYZ-38-t0r" customClass="ViewController" customModule="s_mount" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Selection View Controller" id="BYZ-38-t0r" customClass="SelectionViewController" customModule="s_mount" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="FRj-IZ-PBN">
+                                <rect key="frame" x="20" y="170.5" width="335" height="390"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9kc-1B-aDv" customClass="CustomButton" customModule="s_mount" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="170"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="170" id="Twp-l4-Qh1"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="jF1-2Z-ErJ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="27"/>
+                                        <color key="tintColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Grappling">
+                                            <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="0.5"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="2"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderShadowColor">
+                                                <color key="value" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="size" keyPath="borderShadowOffset">
+                                                <size key="value" width="1" height="1.5"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="borderShadowMasksToBounds" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderShadowOpacity">
+                                                <real key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderShadowRadius">
+                                                <real key="value" value="2"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <segue destination="MpO-2V-hvz" kind="show" id="ugA-Js-zX5"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obl-1e-jr5" customClass="CustomButton" customModule="s_mount" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="220" width="335" height="170"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="G2U-fh-2C8"/>
+                                            <constraint firstAttribute="height" constant="120" id="hdM-wb-cT2"/>
+                                        </constraints>
+                                        <color key="tintColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal">
+                                            <attributedString key="attributedTitle">
+                                                <fragment content="Striking">
+                                                    <attributes>
+                                                        <color key="NSColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <font key="NSFont" size="27" name="Avenir-Medium"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="0.5"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="2"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderShadowColor">
+                                                <color key="value" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="size" keyPath="borderShadowOffset">
+                                                <size key="value" width="1" height="1.5"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="borderShadowMasksToBounds" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderShadowOpacity">
+                                                <real key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderShadowRadius">
+                                                <real key="value" value="2"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="hdM-wb-cT2"/>
+                                            </mask>
+                                        </variation>
+                                    </button>
+                                </subviews>
+                                <variation key="heightClass=compact" axis="horizontal" spacing="20"/>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="FRj-IZ-PBN" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="7Te-he-Fxv"/>
+                            <constraint firstItem="FRj-IZ-PBN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="cfk-dH-AsB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FRj-IZ-PBN" secondAttribute="trailing" constant="20" id="hEl-RO-fa0"/>
+                            <constraint firstItem="FRj-IZ-PBN" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="jH5-oa-i5I"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Choose Mode" id="ep5-Dy-mve"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="342.02898550724638" y="31.793478260869566"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="sog-Nu-FuT">
+            <objects>
+                <viewController id="MpO-2V-hvz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gdH-fR-a4r">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zuu-fJ-cmh">
+                                <rect key="frame" x="0.0" y="64" width="375" height="440"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="440" id="doe-W0-Uhs"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MoveCell" id="hJ9-Cq-flk">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hJ9-Cq-flk" id="xt1-U2-M6T">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GuT-gt-NyZ" customClass="CustomButton" customModule="s_mount" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="597" width="375" height="70"/>
+                                <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="wH9-az-RMO"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VOt-f2-Ic9">
+                                <rect key="frame" x="0.0" y="504" width="375" height="93"/>
+                                <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="93" id="0qL-90-xGh"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="87a-lu-uuO" firstAttribute="bottom" secondItem="GuT-gt-NyZ" secondAttribute="bottom" id="6qC-vR-2zM"/>
+                            <constraint firstItem="Zuu-fJ-cmh" firstAttribute="top" secondItem="87a-lu-uuO" secondAttribute="top" id="76F-jx-GSS"/>
+                            <constraint firstItem="VOt-f2-Ic9" firstAttribute="leading" secondItem="87a-lu-uuO" secondAttribute="leading" id="8A8-0Y-VMj"/>
+                            <constraint firstItem="87a-lu-uuO" firstAttribute="trailing" secondItem="GuT-gt-NyZ" secondAttribute="trailing" id="F8f-fb-n9j"/>
+                            <constraint firstItem="VOt-f2-Ic9" firstAttribute="top" secondItem="Zuu-fJ-cmh" secondAttribute="bottom" id="G9b-1Y-TRE"/>
+                            <constraint firstItem="GuT-gt-NyZ" firstAttribute="leading" secondItem="87a-lu-uuO" secondAttribute="leading" id="NpZ-wi-RSD"/>
+                            <constraint firstItem="87a-lu-uuO" firstAttribute="trailing" secondItem="VOt-f2-Ic9" secondAttribute="trailing" id="PyY-Z8-bnM"/>
+                            <constraint firstItem="Zuu-fJ-cmh" firstAttribute="trailing" secondItem="87a-lu-uuO" secondAttribute="trailing" id="hgo-he-vmR"/>
+                            <constraint firstItem="GuT-gt-NyZ" firstAttribute="top" secondItem="VOt-f2-Ic9" secondAttribute="bottom" id="mR2-57-8cv"/>
+                            <constraint firstItem="Zuu-fJ-cmh" firstAttribute="leading" secondItem="87a-lu-uuO" secondAttribute="leading" id="tbc-jj-X2g"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="87a-lu-uuO"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OVb-us-UvT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1124" y="31.03448275862069"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bXQ-8e-7G7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="e6b-ov-N7I" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1DI-ue-4nx">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Z6V-AK-p2J"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ciu-8r-GJX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-387" y="39"/>
         </scene>
     </scenes>
 </document>
