--- a/s-mount/Base.lproj/Main.storyboard
+++ b/s-mount/Base.lproj/Main.storyboard
@@ -150,7 +150,7 @@
                                 </constraints>
                                 <color key="separatorColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MoveCell" rowHeight="100" id="hJ9-Cq-flk">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MoveCell" rowHeight="100" id="hJ9-Cq-flk" customClass="MoveCell" customModule="s_mount" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hJ9-Cq-flk" id="xt1-U2-M6T">
@@ -158,7 +158,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sprawl" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l6c-Kl-ln9">
-                                                    <rect key="frame" x="80" y="10" width="287" height="30"/>
+                                                    <rect key="frame" x="80" y="10" width="326" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="DyB-iW-eCW"/>
                                                     </constraints>
@@ -167,7 +167,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tWs-YP-WXJ">
-                                                    <rect key="frame" x="80" y="40" width="287" height="49.666666666666657"/>
+                                                    <rect key="frame" x="80" y="40" width="326" height="49.666666666666657"/>
                                                     <string key="text">Lorem ipsum dolor sit amet, sea cibo erat nullam no. Eos ne duis tota accumsan, vis malorum graecis suavitate ut. Reformidans vituperatoribus duo cu, consul ignota epicurei ius eu</string>
                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
                                                     <nil key="textColor"/>
@@ -229,6 +229,11 @@
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="moveCheckBox" destination="2s9-I4-s9x" id="na2-9B-5ZL"/>
+                                            <outlet property="moveDescriptionLabel" destination="tWs-YP-WXJ" id="4aE-oG-7Op"/>
+                                            <outlet property="moveNameLabel" destination="l6c-Kl-ln9" id="4lB-ve-PlP"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <variation key="default">
@@ -402,6 +407,7 @@
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="0.0056366047745357584" green="0.0056366047745357584" blue="0.0056366047745357584" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="0qL-90-xGh"/>
                                     <constraint firstAttribute="bottom" secondItem="Fb4-Tk-xit" secondAttribute="bottom" constant="10" id="3HS-g6-xRe"/>
